v141
    -Add command line option recursion depth -r.
v141
    -Fix bad compression on mrb.
    -Re-enable WRT for streams 8 and 9.
    -Add missing filter for type TEXT0.
    -Adjust text parser.
    -Enable EOL type in text parser.
    -Fix WRT for large files +2G.
    -Add better command line parsing and cleanup help.
v140
    -In tiff parser enable lzw type.
    -In tga parser detect 8bit RLE compressed images.
    -In codec add 24/32bit image filter for LZW compressed images.
    -Cleanup codec statistics.
    -In some cases use pdflzw parser as an image detector.
    -Fix exe parser for small input lengths.
    -Fix deca parser and fix for small input lengths.
    -In gif parser change min input size to 32 bytes.
    -Add .so extension to virtual exe group.
    -Allow deca parser only in virtual exe group.
    -Add .js and .css into the text parser group.
    -Fix MSCF parser.
v139
    -In tga parser wait for data end.
    -In codec test 24/32 bit image pre-post transform size.
    -Fix tiff parser, bad detection, crash.
    -Fix SZDD parser, incorrect length when recompressing.
    -In codec add fail statistics. Show summary.
v138
    -Add zip reduce filter, not active.
    -Fix shrink filter.
    -Add zip implode filter, not active.
    -Move data statistics into Codec.
    -Cosmetic change to type info.    
    -Fix silent transform fails, decompress not identical.
    -Fixes in SZDD parser.
    -In tiff parser ignore image if compressed and tag 279 is missing.
    -In pdflzw parser add FlateDecode detection only for non-image data
     and do some fixes.
v137
    -Show count of files in tar parser.
    -Fix iso parser for large files (+4G).
    -Fix mdf parser.
    -Fix cd parser.
    -Cleanup compare/extract log. Show final summary.
    -Add shrink/unshrink filter for .zip
    -Fix tiff parser.
    -Fix zip parser.
v136
    -Add InstallShield CAB parser (ver 5), contains zlib streams.
     Active for extension .cab