@@ -42,6 +42,8 @@
 #include "parsers/isoparser.hpp"
 #include "parsers/iscabparser.hpp"
 
+
+
 class Analyzer {
     uint64_t info;
     std::vector<Parser*> parsers;
@@ -58,9 +60,11 @@ class Analyzer {
     std::string *pinfo;
     const uint64_t BLOCK;  // block size 64k
     Array<uint8_t> blk;
+    ParserType *vusrPT;    // User defined parser list
+    bool isUserPL;
     void Status(uint64_t n, uint64_t size);
 public:    
-    Analyzer(int it, Filetype p=DEFAULT, ParserType eparser=P_DEF); // Iter level, parent type, expected parser
+    Analyzer(int it, Filetype p=DEFAULT, ParserType eparser=P_WDEFAULT, ParserType *vup=nullptr); // Iter level, parent type, expected parser
     ~Analyzer();
     bool Detect(File* in, U64 n, int it=0);
     dType GetNext();
