@@ -56,6 +56,7 @@ class Codec {
     Array<Stat> stat;          // block statistics
     Stat statFail;
     int itcount;
+    ParserType *vusrPT;        // User defined parser list
     void AddFilter(Filter *f);
     void direct_encode_blockstream(Filetype type, File*in, U64 len, int info=0);
     void transform_encode_block(Filetype type, File*in, U64 len, int info, int info2, char *blstr, int it, U64 begin,File*tmp);
@@ -63,7 +64,7 @@ class Codec {
     void AddStat(Filetype type, uint64_t len, int i);
     void RemoveStat(Filetype type, uint64_t len, int i);
     public:
-        Codec(FMode m, Streams *s, Segment *g, int depth=6);
+        Codec(FMode m, Streams *s, Segment *g, int depth=6, ParserType *vup=nullptr);
         virtual ~Codec();
         virtual void DecodeFile(const char* filename, uint64_t filesize);
         virtual void EncodeFile(const char* filename, uint64_t filesize);
@@ -72,6 +73,6 @@ class Codec {
         void PrintStat(int limit=5);
     protected:
         virtual uint64_t DecodeFromStream(File *out, uint64_t size, FMode mode, int it=0);
-        virtual void EncodeFileRecursive(File*in, uint64_t n, char *blstr, int it=0, Filetype p=DEFAULT, ParserType etype=P_DEF);
+        virtual void EncodeFileRecursive(File*in, uint64_t n, char *blstr, int it=0, Filetype p=DEFAULT, ParserType etype=P_WDEFAULT);
 };
 
