@@ -1,5 +1,7 @@
 v141
     -Add command line option recursion depth -r.
+    -Add virtual default parser group.
+    -Add command line option for user defined parsers -p.
 v141
     -Fix bad compression on mrb.
     -Re-enable WRT for streams 8 and 9.
